--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- Core theme CSS -->
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c1e3996025.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -45,7 +46,7 @@
 
     <div id="links">
       <a class="link" href="https://profile.iyam.my.id/" target="_blank">
-        <i class="fa-globe ">&nbsp;</i>Website
+        <i class="fa fa-globe ">&nbsp;</i>Website
       </a>
       <a class="link" href="https://github.com/work-ham" target="_blank">
         <i class="fab fa-github">&nbsp;</i>Github
