--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       <a class="link" href="https://www.instagram.com/ilham.kus/" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
+      <a class="link" href="https://open.spotify.com/user/31fyrfzqf7vmbe7jfz66f4gi2swe?si=tcMuB3uBSN2r_h2NgAx2MQ" target="_blank">
+        <i class="fa-brands fa-spotify">&nbsp;</i>Spotify
+      </a>
     </div>
 
     <div id="hashtag">
