Add Steam link to index.html

--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
       <a class="link" href="https://open.spotify.com/user/31fyrfzqf7vmbe7jfz66f4gi2swe?si=tcMuB3uBSN2r_h2NgAx2MQ" target="_blank">
         <i class="fa-brands fa-spotify">&nbsp;</i>Spotify
       </a>
+      <a class="link" href="https://steamcommunity.com/id/LittleChief/" target="_blank">
+        <i class="fa-brands fa-steam">&nbsp;</i>Steam
+      </a>
     </div>
-
     <div id="hashtag">
       #StayHealthy❤  #BeHappy❤
     </div>
